--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/svelte-loader": "^1.11.1",
 		"@sanity/visual-editing": "^2.0.0",
+		"daisyui": "^4.12.10",
+		"dayjs": "^1.11.12",
 		"groq": "^3.33.0"
 	},
 	"devDependencies": {
@@ -30,9 +32,13 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
 		"postcss": "^8.4.39",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.5",
+		"sass": "^1.77.8",
 		"svelte": "^4.2.18",
+		"tailwindcss": "^3.4.7",
+		"tailwindcss-3d": "^1.0.6",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
 		"vite": "^5.3.3"
