--- a/studio/package.json
+++ b/studio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studio",
+  "name": "cameronhammelcom",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,28 +15,24 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.33.0",
+    "@sanity/color-input": "^3.1.1",
+    "@sanity/vision": "^3.52.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "sanity": "^3.33.0",
+    "sanity": "^3.52.4",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@sanity/eslint-config-studio": "^3.0.1",
-    "@types/node": "^18.19.23",
-    "@types/react": "^18.3.3",
-    "eslint": "^8.57.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.3"
+    "@sanity/eslint-config-studio": "^4.0.0",
+    "@types/react": "^18.0.25",
+    "eslint": "^8.6.0",
+    "prettier": "^3.0.2",
+    "typescript": "^5.1.6"
   },
   "prettier": {
     "semi": false,
     "printWidth": 100,
     "bracketSpacing": false,
     "singleQuote": true
-  },
-  "engines": {
-    "node": ">= 14.18"
   }
 }
