--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "prettier": "3.3.3",
     "prettier-plugin-packagejson": "2.5.1"
   },
-  "packageManager": "pnpm@9.6.0"
+  "packageManager": "pnpm@9.6.0",
+  "dependencies": {
+    "app": "workspace:*",
+    "studio": "workspace:*"
+  }
 }
