--- a/packages/studio/package.json
+++ b/packages/studio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cameronhammelcom",
+  "name": "studio",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity-typed/types": "^6.3.6",
     "@sanity/color-input": "^3.1.1",
     "@sanity/vision": "^3.52.4",
     "react": "^18.2.0",
