--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanity-template-sveltekit-clean",
+  "name": "cameronhammel-portfolio",
   "version": "1.0.0",
   "private": true,
   "scripts": {
