--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,10 +37,12 @@
 		"prettier-plugin-svelte": "^3.2.5",
 		"sass": "^1.77.8",
 		"svelte": "^4.2.18",
+		"svelte-seo": "^1.6.1",
 		"tailwindcss": "^3.4.7",
 		"tailwindcss-3d": "^1.0.6",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
+		"unplugin-svelte-components": "^0.3.1",
 		"vite": "^5.3.3"
 	},
 	"type": "module",
