use intersection observer to display "on this page" status

--- a/packages/app/.eslintrc-components.json
+++ b/packages/app/.eslintrc-components.json
@@ -2,6 +2,7 @@
     "globals": {
         "ProjectQuote": true,
         "ProjectSection": true,
+        "ProjectSidebar": true,
         "ProjectTechStack": true,
         "ProjectTitle": true,
         "CustomMark": true,
