--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
 		"postcss": "^8.4.39",
+		"postcss-hover-media-feature": "^1.0.2",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.5",
