--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -38,6 +38,7 @@
 		"prettier-plugin-svelte": "^3.2.5",
 		"sass": "^1.77.8",
 		"svelte": "^4.2.18",
+		"svelte-fullpage": "^1.1.0",
 		"svelte-intersection-observer": "^1.0.0",
 		"svelte-seo": "^1.6.1",
 		"tailwindcss": "^3.4.7",
