--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,8 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.42.0",
 		"fontaine": "^0.5.0",
+		"houdini": "^1.2.54",
+		"houdini-svelte": "^1.2.54",
 		"postcss": "^8.4.39",
 		"postcss-hover-media-feature": "^1.0.2",
 		"postcss-load-config": "^4.0.1",
