add aboutme section

--- a/packages/app/.eslintrc-components.json
+++ b/packages/app/.eslintrc-components.json
@@ -1,5 +1,6 @@
 {
     "globals": {
+        "AboutMe": true,
         "ProjectQuote": true,
         "ProjectSection": true,
         "ProjectSidebar": true,
