--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,7 +35,8 @@
 		"postcss-hover-media-feature": "^1.0.2",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"sass": "^1.77.8",
 		"svelte": "^4.2.18",
 		"svelte-fullpage": "^1.1.0",
