add contribution calendar (static data)

--- a/packages/app/.eslintrc-components.json
+++ b/packages/app/.eslintrc-components.json
@@ -1,6 +1,7 @@
 {
     "globals": {
         "AboutMe": true,
+        "ContributionCalendar": true,
         "ProjectQuote": true,
         "ProjectSection": true,
         "ProjectSidebar": true,
