show quotes on landing page

--- a/packages/app/.eslintrc-components.json
+++ b/packages/app/.eslintrc-components.json
@@ -2,12 +2,12 @@
     "globals": {
         "AboutMe": true,
         "ContributionCalendar": true,
-        "ProjectQuote": true,
         "ProjectSection": true,
         "ProjectSidebar": true,
         "ProjectTechStack": true,
         "ProjectTitle": true,
         "CustomMark": true,
+        "Quote": true,
         "SvelteSeo": true
     }
 }
